[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/scene/reader_stages/reader_3e.png" type="Texture" id=1]
[ext_resource path="res://scripts/reader.gd" type="Script" id=2]
[ext_resource path="res://sprites/scene/reader_stages/green.png" type="Texture" id=3]
[ext_resource path="res://sprites/scene/reader_stages/yellow.png" type="Texture" id=4]
[ext_resource path="res://sprites/scene/reader_stages/red.png" type="Texture" id=5]
[ext_resource path="res://sprites/scene/reader_stages/reader_2e.png" type="Texture" id=6]
[ext_resource path="res://sprites/scene/reader_stages/reader_1e.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="reader_cc" type="RigidBody2D"]
z_index = -1
mode = 3
script = ExtResource( 2 )

[node name="stage" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="polygon_1e" type="CollisionPolygon2D" parent="."]
position = Vector2( -3, 19 )
build_mode = 1
polygon = PoolVector2Array( -18, -8, -18, -29.757, -12.9926, -35, -9, -35, -9, -39, -3, -39, -3, -35, 13.0147, -35, 18, -29.8339, 18, -24, 9, -24, 9, -13, 18, -13, 18, -9, 13, -3, -13, -3 )

[node name="polygon_2e" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -3, 19 )
build_mode = 1
polygon = PoolVector2Array( -18, 9, -18, -29.757, -12.9926, -35, -9, -35, -9, -39, -3, -39, -3, -35, 13.0147, -35, 18, -29.8339, 18, -24, 9, -24, 9, -13, 18, -13, 18, -6, 9, -6, 9, 5, 18, 5, 18, 9, 13, 16, -13, 16 )

[node name="polygon_3e" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -3, 19 )
build_mode = 1
polygon = PoolVector2Array( -18, 29.0018, -18, -29.757, -12.9926, -35, -9, -35, -9, -39, -3, -39, -3, -35, 13.0147, -35, 18, -29.8339, 18, -24, 9, -24, 9, -13, 18, -13, 18, -6, 9, -6, 9, 5, 18, 5, 18, 12, 9, 12, 9, 23, 18, 23, 18, 29.0018, 13.0192, 34, -12.8574, 34 )

[node name="input_3" type="Area2D" parent="."]
visible = false
position = Vector2( -3, 13 )
z_index = 2
z_as_relative = false
collision_layer = 2

[node name="input_3_p" type="CollisionPolygon2D" parent="input_3"]
position = Vector2( 3, 42 )
scale = Vector2( 0.71224, 1 )
polygon = PoolVector2Array( 8.42413, -24, 8.42413, -13, 11.2322, -13, 11.2322, -24 )

[node name="in_3" type="AnimatedSprite" parent="input_3"]
position = Vector2( -12, 18 )
frames = SubResource( 2 )
offset = Vector2( 27, 6 )

[node name="input_2" type="Area2D" parent="."]
visible = false
position = Vector2( -3, -23 )

[node name="input_2_p" type="CollisionPolygon2D" parent="input_2"]
position = Vector2( 0, 60 )
polygon = PoolVector2Array( 9, -24, 9, -13, 11, -13, 11, -24 )

[node name="in_2" type="AnimatedSprite" parent="input_2"]
position = Vector2( -12, 36 )
frames = SubResource( 2 )
offset = Vector2( 27, 6 )

[node name="input_1" type="Area2D" parent="."]
position = Vector2( -3, -59 )

[node name="input_1_p" type="CollisionPolygon2D" parent="input_1"]
position = Vector2( 0, 78 )
polygon = PoolVector2Array( 9, -24, 9, -13, 11, -13, 11, -24 )

[node name="in_1" type="AnimatedSprite" parent="input_1"]
position = Vector2( -12, 54 )
frames = SubResource( 2 )
offset = Vector2( 27, 6 )
[connection signal="body_entered" from="input_3" to="." method="_on_input_3_body_entered"]
[connection signal="body_exited" from="input_3" to="." method="_on_input_3_body_exited"]
[connection signal="body_entered" from="input_2" to="." method="_on_input_2_body_entered"]
[connection signal="body_exited" from="input_2" to="." method="_on_input_2_body_exited"]
[connection signal="body_entered" from="input_1" to="." method="_on_input_1_body_entered"]
[connection signal="body_exited" from="input_1" to="." method="_on_input_1_body_exited"]
